fixed padding again. changed transparency to darker behind main text.

--- a/css/custom.css
+++ b/css/custom.css
@@ -15,12 +15,10 @@ header#header-3 nav {
 }
 
 .col-md-6.intro-txt.white-color {
-  background-color: rgba(0, 0, 0, .45);
+  background-color: rgba(0, 0, 0, 0.6);
   padding-top: 1em;
   padding-bottom: 1em;
 }
-
-
 
 section#intro-6 {
   max-width: 1920px;
@@ -51,7 +49,7 @@ section#intro-6 h2 {
 }
 
 @media only screen and (max-width: 991px) {
-  #intro-6-content .intro-txt {
+  #intro-6 .col-md-6.intro-txt.m-top-30 {
     padding: 2em;
   }
 
